--- a/playbook.yml
+++ b/playbook.yml
@@ -5,5 +5,8 @@
       name: "uperf-bench"
     when: uperf is defined and uperf.pair > 0
   - include_role:
+      name: "couchbase-infra"
+    when: couchbase is defined and couchbase.servers.size > 0
+  - include_role:
       name: "fio-bench"
     when: fio is defined and fio.clients > 0
