--- a/deploy/crds/bench_v1alpha1_bench_cr.yaml
+++ b/deploy/crds/bench_v1alpha1_bench_cr.yaml
@@ -5,25 +5,26 @@ metadata:
 spec:
   uperf:
     # To disable uperf, set pairs to 0
-    pair: 1
+    pair: 0
     proto: tcp
     test_type: stream
     nthr: 2
     size: 16384
     runtime: 10
-  couchbase: 
+  couchbase:
     # To disable couchbase, set servers.size to 0
     # Typical deployment size is 3
     servers:
-      size: 0
+      size: 1
     storage:
-      use_persistent_storage: True
+      use_persistent_storage: false
       class_name: "rook-ceph-block"
       volume_size: 10Gi
     on_openshift: True
+    pull_secret: <Insert Pull secret from Red Hat Registry>
   fio:
     # To disable fio, set clients to 0
-    clients: 0
+    clients: 1
     jobname: test-write
     bs: 4k
     iodepth: 4
