--- a/deploy/crds/bench_v1alpha1_bench_cr.yaml
+++ b/deploy/crds/bench_v1alpha1_bench_cr.yaml
@@ -6,7 +6,7 @@ spec:
   # cleanup: true
   uperf:
     # To disable uperf, set pairs to 0
-    pair: 1
+    pair: 0
     proto: tcp
     test_type: stream
     nthr: 2
@@ -14,12 +14,13 @@ spec:
     runtime: 10
   fio:
     # To disable fio, set clients to 0
-    clients: 0
-    jobname: test-write
+    job: seq_write # either of seq_write, seq_read, seq_rw, rand_write, rand_read, rand_rw
+    clients: 1
+    jobname: seq-write
     bs: 4k
     iodepth: 4
-    runtime: 57
-    rw: write
+    runtime: 60
+    numjobs: 1
     filesize: 1
   sysbench:
     enabled: true
