--- a/roles/fio-bench/tasks/main_org.yml
+++ b/roles/fio-bench/tasks/main_org.yml
@@ -5,10 +5,10 @@
       apiVersion: v1
       kind: ConfigMap
       metadata:
-        name: fio-test-shekhar
+        name: fio-test
         namespace: '{{ meta.namespace }}'
       data:
-        fiojob: "{{ lookup('template', 'job.fio.{{fio.job}}') }}"
+        fiojob: "{{ lookup('template', 'job.fio.j2') }}"
   when: fio.clients > 0
 
 - name: Start Server(s)
@@ -35,7 +35,7 @@
         volumes:
         - name: config-volume
           configMap:
-            name: fio-test-shekhar
+            name: fio-test
         restartPolicy: Never
   when: fio.clients > 0
   with_sequence: start=1 count={{fio.clients}}
