Chnages to FIO task/main.yml to request PVC

--- a/deploy/crds/bench_v1alpha1_bench_cr.yaml
+++ b/deploy/crds/bench_v1alpha1_bench_cr.yaml
@@ -22,6 +22,8 @@ spec:
     runtime: 60
     numjobs: 1
     filesize: 1
+    storageclass: rook-ceph-block
+    storagesize: 27Gi
   sysbench:
     enabled: true
     tests:
