--- a/roles/fio-bench/tasks/main.yml
+++ b/roles/fio-bench/tasks/main.yml
@@ -11,6 +11,23 @@
         fiojob: "{{ lookup('template', 'job.fio.{{fio.job}}') }}"
   when: fio.clients > 0
 
+- name: Create PVC(s)
+  k8s:
+    definition:
+      kind: PersistentVolumeClaim
+      apiVersion: v1
+      metadata:
+        name: "claim1"
+        namespace: '{{ meta.namespace }}'
+        annotations:
+           volume.beta.kubernetes.io/storage-class: "{{fio.storageclass}}"
+      spec:
+         accessModes:
+           - ReadWriteOnce
+         resources:
+           requests:
+             storage: "{{fio.storagesize}}"
+
 - name: Start Server(s)
   k8s:
     definition:
@@ -34,6 +51,8 @@
             mountPath: "/tmp/fio"
         volumes:
         - name: config-volume
+          persistentVolumeClaim: 
+            claimName: claim1
           configMap:
             name: fio-test-shekhar
         restartPolicy: Never
