--- a/resources/crds/benchmark_v1alpha1_benchmark_cr.yaml
+++ b/resources/crds/benchmark_v1alpha1_benchmark_cr.yaml
@@ -14,13 +14,16 @@ spec:
     runtime: 10
   fio:
     # To disable fio, set clients to 0
+    job: seq # either of  seq, rand or custom
     clients: 0
-    jobname: test-write
+    jobname: seq # either of seq, rand or custom
     bs: 4k
     iodepth: 4
-    runtime: 57
-    rw: write
+    runtime: 60
+    numjobs: 2
     filesize: 1
+    storageclass: rook-ceph-block
+    storagesize: 25Gi
   sysbench:
     enabled: false
     #kind: vm
