--- a/roles/fio-bench/tasks/main.yml
+++ b/roles/fio-bench/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+
+- set_fact:
+    fio_path: /mnt/pvc
+  when: fio.storageclass is defined
+
+- set_fact:
+    fio_path: /tmp
+  when: fio.storageclass is not defined
+
+
 - name: Generate fio test
   k8s:
     definition:
@@ -8,14 +18,34 @@
         name: fio-test
         namespace: '{{ meta.namespace }}'
       data:
-        fiojob: "{{ lookup('template', 'job.fio.j2') }}"
-  when: fio.clients > 0
+        fiojob: "{{ lookup('template', 'job.fio.{{fio.job}}') }}"
+  when:  fio.clients > 0 
+  register: template_file
 
-- name: Start Server(s)
+- name: Create PVC(s)
   k8s:
     definition:
-      kind: Job
-      apiVersion: batch/v1
+      kind: PersistentVolumeClaim
+      apiVersion: v1
+      metadata:
+        name: "claim{{item}}"
+        namespace: '{{ meta.namespace }}'
+        annotations:
+           volume.beta.kubernetes.io/storage-class: "{{fio.storageclass}}"
+      spec:
+         accessModes:
+           - ReadWriteOnce
+         resources:
+           requests:
+             storage: "{{fio.storagesize}}"
+  with_sequence: start=1 count={{fio.clients}}
+  when: fio.clients > 0 and fio.storageclass is defined
+
+- name: Start Server(s) - with PVC
+  k8s:
+    definition:
+      kind: Pod
+      apiVersion: v1
       metadata:
         name: '{{ meta.name }}-fio-client-{{item}}-benchmark'
         namespace: '{{ meta.namespace }}'
@@ -25,21 +55,59 @@
           metadata:
             labels:
               app: fio-benchmark
-          spec:
-            containers:
-            - name: benchmark-server
-              image: "quay.io/jtaleric/fio:testing"
-              command: ["/bin/sh", "-c"]
-              args:
-                - "cat /tmp/fio/fiojob;
-                   fio /tmp/fio/fiojob"
-              volumeMounts:
-              - name: config-volume
-                mountPath: "/tmp/fio"
-            volumes:
-            - name: config-volume
-              configMap:
-                name: fio-test
-            restartPolicy: Never
-  when: fio.clients > 0
+      spec:
+        containers:
+        - name: bench-server
+          image: "quay.io/jtaleric/fio:testing"
+          command: ["/bin/sh","-c"]
+          args:
+           - "cat /tmp/fio/fiojob;
+              fio /tmp/fio/fiojob"
+          volumeMounts:
+          - name: config-volume
+            mountPath: "/tmp/fio"
+          - name: ceph-volume
+            mountPath: "/mnt/pvc"
+        volumes:
+        - name: config-volume
+          configMap:
+            name: fio-test
+        - name: ceph-volume
+          persistentVolumeClaim:
+            claimName: claim{{item}}
+        restartPolicy: Never
+  when: fio.clients > 0 and fio.storageclass is defined
+  with_sequence: start=1 count={{fio.clients}}
+
+- name: Start Server(s) - no PVC
+  k8s:
+    definition:
+      kind: Pod
+      apiVersion: v1
+      metadata:
+        name: '{{ meta.name }}-fio-client-{{item}}-benchmark'
+        namespace: '{{ meta.namespace }}'
+      spec:
+        ttlSecondsAfterFinished: 600
+        template:
+          metadata:
+            labels:
+              app: fio-benchmark   
+      spec:
+        containers:
+        - name: bench-server
+          image: "quay.io/jtaleric/fio:testing"
+          command: ["/bin/sh","-c"]
+          args:
+           - "cat /tmp/fio/fiojob;
+              fio /tmp/fio/fiojob"
+          volumeMounts:
+          - name: config-volume
+            mountPath: "/tmp/fio"
+        volumes:
+        - name: config-volume
+          configMap:
+            name: fio-test
+        restartPolicy: Never
+  when: fio.clients > 0 and fio.storageclass is not defined
   with_sequence: start=1 count={{fio.clients}}
