--- a/resources/crds/benchmark_v1alpha1_benchmark_cr.yaml
+++ b/resources/crds/benchmark_v1alpha1_benchmark_cr.yaml
@@ -14,9 +14,10 @@ spec:
     runtime: 10
   fio:
     # To disable fio, set clients to 0
-    job: seq # either of  seq, rand or custom
-    clients: 0
-    jobname: seq # either of seq, rand or custom
+    job: custom # either of  seq, rand or custom
+    clients: 2
+    jobname: custom # either of seq, rand or custom
+    get_url: http://perf1.perf.lab.eng.bos.redhat.com/pub/shberry/fio/custom.fio #If Job is custom, provide URL of job here 
     bs: 4k
     iodepth: 4
     runtime: 60
